--- a/styles/home.css
+++ b/styles/home.css
@@ -1,7 +1,10 @@
 body {
-	/* Child Positioning */
-	display: flex;
-	align-items: center;
+
+}
+
+#site-navigation {
+	/* Sizing and Positioning */
+	position: relative;
 }
 
 #headline {
@@ -10,8 +13,17 @@ body {
 	margin-bottom: 0;
 
 	/* Positioning and Spacing */
-	margin-bottom: 10%;
+	flex-shrink: 0;
+	flex-grow: 1;
+	padding-top: auto;
+	padding-bottom: auto;
+	margin-top: -40px; /* -CONSTANT:NAVIGATION_LI_HEIGHT */
 
 	/* Text Style */
-	font-size: 180%;
+	font-size: 200%;
+
+	/* Child Positioning */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
