--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,10 @@ body {
 
 	/* Background */
 	background-color: #f4f4f4;
+
+	/* Child Positioning */
+	display: flex;
+	flex-direction: column;
 }
 
 a {
@@ -38,11 +42,9 @@ a {
 
 	/* Positioning and Sizing */
 	box-sizing: border-box;
-	position: absolute;
-	top: 0;
-	right: 0;
-	padding: 1% 5%;
 	width: 100%;
+	flex-shrink: 0;
+	flex-grow: 0;
 
 	/* Child Positioning */
 	display: flex;
@@ -52,7 +54,7 @@ a {
 
 #site-navigation li {
 	/* Positioning and Sizing */
-	height: 40px;
+	height: 40px; /* CONSTANT:NAVIGATION_LI_HEIGHT */
 	flex-grow: 2;
 	flex-shrink: 0;
 	max-width: 120px;
