--- a/styles/projects.css
+++ b/styles/projects.css
@@ -15,7 +15,7 @@
 	flex-basis: 500px;
 	flex-grow: 1;
 	flex-shrink: 1;
-	margin-top: 10px;
+	margin-top: 15px;
 	margin-bottom: 10px;
 	margin-right: 10px;
 }
@@ -23,12 +23,18 @@
 .card .title {
 	width: 100%;
 	font-size: 160%;
-	margin: 10px 0;
+	margin: 0;
 }
 
 .card .preview {
 	width: 100%;
 	height: 200px;
+	margin: 10px 0;
+}
+
+.card .caption {
+	width: 100%;
+	font-size: 80%;
 }
 
 .card .description {
@@ -41,11 +47,12 @@
 	display: flex;
 	justify-content: flex-start;
 	margin: 3px 0;
+	font-size: 80%;
 }
 
 .card .tag-set:child{
 	flex-shrink: 0;
-	flex-grow: 1;
+	flex-grow: 0;
 }
 
 .card .tag-set .tag {
@@ -54,4 +61,19 @@
 	border-radius: 5px;
 	border: 1px solid #378ce8;
 	background-color: #eff7fc;
+}
+
+#ml-research-image {
+	width: 100%;
+	height: 100%;
+}
+
+#fractals-canvas {
+	width: 100%;
+	height: 100%;
+}
+
+#sheaconloncom-image {
+	width: 100%;
+	height: 100%;
 }
