--- a/styles/home.css
+++ b/styles/home.css
@@ -13,6 +13,7 @@ body {
 	padding-top: auto;
 	padding-bottom: auto;
 	margin-top: -40px; /* -CONSTANT:NAVIGATION_LI_HEIGHT */
+	padding-right: 10%;
 
 	/* Text Style */
 	font-size: 200%;
